# solana-marketplace

./: .editorconfig  .gitignore  .prettierrc  Anchor.toml  README.md  package.json
app/: .babelrc.js  .editorconfig  .env.development  .env.production  .prettierrc  README.md  next-seo.json  next-sitemap.js  next.config.js  package.json  tsconfig.json  windi.config.ts
app/public/: sitemap-0.xml
app/src/: interface.ts
app/src/components/: ActiveLink.tsx  BuyNFT.tsx  SellNFT.tsx
app/src/data/: list.json
app/src/idl/: solana_marketplace.json
app/src/layouts/: Footer.tsx  Header.tsx  Layout.tsx
app/src/pages/: _app.tsx  buy.tsx  index.tsx  sell.tsx
app/src/solana/idl/: solana_marketplace.json
app/src/solana/instructions/: buy.ts  closeSell.ts  createMarket.ts  createStore.ts  index.ts  initSellingResource.ts  sell.ts  setup.ts  toggleFreeze.ts  toggleFreezeProgram.ts  updateFeeAccount.ts  updateFeeRate.ts  updateOwner.ts  updateSellPrice.ts
app/src/solana/nft/: index.ts
app/src/solana/states/: config.ts  index.ts  sell.ts  store.ts  (+1 more)
app/src/stores/: index.ts
app/src/types/: solana_marketplace.ts
app/src/utils/: constant.ts  createAndSignTransaction.ts  index.ts
config/: dev.json  live.json  local.json
keypair/: NFT99UUrXCrtYfyAEgAnKPfh9sA3LtSP2sSDLmBW8UF.json  NFTMCFJD7ACCQr29CXeyqgMJe2HhdQJBDEMpSfTcqCk.json  NFTMTNtLozbwJzvLDcdp2qRSgm4tKHxo2eu4cD3nC9y.json
migrations/: deploy.ts
programs/nft_marketplace/: Cargo.toml
programs/nft_marketplace/src/: lib.rs  models.rs  validate.rs
programs/solana_marketplace/: Cargo.toml
programs/solana_marketplace/src/: constants.rs  contexts.rs  errors.rs  lib.rs  models.rs  utils.rs  validate.rs
programs/solana_marketplace/src/instructions/: buy.rs  close_sell.rs  freeze_program.rs  mod.rs  sell.rs  setup.rs  start_sell.rs  toggle_freeze.rs  toggle_freeze_program.rs  update_config.rs  update_fee_account.rs  update_fee_rate.rs  update_owner.rs  update_sell.rs  update_sell_price.rs
programs/solana_marketplace/src/state/: config.rs  mod.rs  offer.rs  sell.rs
programs/solana_marketplace/src/states/: config.rs  sell.rs
tests/: nft_marketplace.ts  utils.ts
tests/keys/: keyinfo.md  usdc.json  user_A.json  user_B.json
(+7 files in other folders)
