[package]
name = "nft_marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "1.9.13"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.2.4", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"
chainlink_solana = "1.0.0"
