[package]
name = "solana-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
solana-program = "1.10.41"
spl-token = { version = "3.3.1", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "1.6.1", features = ["no-entrypoint"] }
arrayref = "0.3.6"